--- a/azure-pipelines-full.yml
+++ b/azure-pipelines-full.yml
@@ -98,19 +98,17 @@ stages:
           - task: AzureCLI@1
             displayName: Deploy App to the Cluster
             inputs:
-              # Change here if you changed name for Service Connection
-              azureSubscription: 'serviceprincipal'
+              azureSubscription: 'miferrac-service-conn'
               scriptLocation: 'inlineScript'
-              addSpnToEnvironment: true
               inlineScript: |
                 az aks get-credentials -n $(AKS_CLUSTER_NAME) -g $(RESOURCE_GROUP_NAME)
-
+                
                 pwd
-
+                
                 echo "helm repo add && helm repo update"
                 helm repo add stable https://charts.helm.sh/stable
                 helm repo update
-
+                
                 # echo ""
                 # echo "helm install traefik ingress controller"
                 # helm upgrade "bikesharing-traefik-mf" stable/traefik \
@@ -120,16 +118,16 @@ stages:
                 #   --set rbac.enabled=true \
                 #   --set kubernetes.ingressEndpoint.useDefaultPublishedService=true \
                 #   --version 1.85.0 --install
-
+                
                 echo ""
                 echo "Waiting for BikeSharing ingress Public IP to be assigned..."
                 while [ -z "$PUBLICIP" ]; do
                   sleep 5
                   PUBLICIP=$(kubectl get svc -n $(CLUSTER_NAMESPACE) bikesharing-traefik-mf -o jsonpath={.status.loadBalancer.ingress[0].ip})
                 done
-
+                
                 helm dependency update samples/BikeSharingApp/charts
-
+                
                 echo ""
                 echo "Install applications in the cluster"
                 helm upgrade "bikesharingapp-mf" samples/BikeSharingApp/charts \
@@ -156,4 +154,5 @@ stages:
                   --namespace $(CLUSTER_NAMESPACE) \
                   --timeout 9m \
                   --atomic --install
+              addSpnToEnvironment: true
               workingDirectory: '$(System.DefaultWorkingDirectory)'
