--- a/azure-pipelines-full.yml
+++ b/azure-pipelines-full.yml
@@ -111,10 +111,10 @@ stages:
                 
                 echo ""
                 echo "helm install traefik ingress controller"
-                helm upgrade "bikesharing-traefik-mf" stable/traefik \
+                helm upgrade "bikesharing-ingress-mf" stable/traefik \
                   --namespace $(CLUSTER_NAMESPACE) --create-namespace \
                   --set kubernetes.ingressClass=traefik \
-                  --set fullnameOverride=bikesharing-traefik-mf \
+                  --set fullnameOverride=bikesharing-ingress-mf \
                   --set rbac.enabled=true \
                   --set kubernetes.ingressEndpoint.useDefaultPublishedService=true \
                   --version 1.85.0 --install
@@ -123,7 +123,7 @@ stages:
                 echo "Waiting for BikeSharing ingress Public IP to be assigned..."
                 while [ -z "$PUBLICIP" ]; do
                   sleep 5
-                  PUBLICIP=$(kubectl get svc -n $(CLUSTER_NAMESPACE) bikesharing-traefik-mf -o jsonpath={.status.loadBalancer.ingress[0].ip})
+                  PUBLICIP=$(kubectl get svc -n $(CLUSTER_NAMESPACE) bikesharing-ingress-mf -o jsonpath={.status.loadBalancer.ingress[0].ip})
                 done
                 
                 echo ""
