Update yaml-canary.yml for Azure Pipelines

--- a/yaml-canary.yml
+++ b/yaml-canary.yml
@@ -7,6 +7,7 @@ trigger: none
 parameters:
   - name: buildInput
     type: number
+    default: 416
     
 variables:
   - template: .ci/yamlVariables.yml
