--- a/samples/BikeSharingApp/ReservationEngine/app.csproj
+++ b/samples/BikeSharingApp/ReservationEngine/app.csproj
@@ -3,9 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>adf40de4-2a03-4838-a488-1a057506dd70</UserSecretsId>
+    <ApplicationInsightsResourceId>/subscriptions/fd94b044-d980-40d3-bd9c-0417736c7b36/resourceGroups/expertdays-rg/providers/microsoft.insights/components/bikeapp-ai</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Kubernetes.Tools.Targets" Version="1.1.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
