--- a/samples/BikeSharingApp/ReservationEngine/appsettings.json
+++ b/samples/BikeSharingApp/ReservationEngine/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "CustomConfiguration": {
     "MongoDBConnectionInfo": {
       "ConnectionString": "mongodb://databases-mongo",
@@ -9,5 +9,8 @@
       "Bikes": "bikes",
       "Billing": "billing"
     }
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=e36173f3-a3ab-44b3-85a3-a1e99636fca4;IngestionEndpoint=https://westeurope-1.in.applicationinsights.azure.com/"
   }
 }
