Update yaml-canary.yml for Azure Pipelines

--- a/yaml-canary.yml
+++ b/yaml-canary.yml
@@ -48,6 +48,7 @@ stages:
         runOnce:
           deploy:
             steps:
+            - checkout: self
             - task: KubernetesManifest@0
               displayName: promote canary
               inputs:
@@ -70,7 +71,8 @@ stages:
       strategy:
         runOnce:
           deploy:
-            steps:            
+            steps:
+            - checkout: self
             - task: KubernetesManifest@0
               displayName: reject canary
               inputs:
