--- a/samples/BikeSharingApp/Gateway/app.csproj
+++ b/samples/BikeSharingApp/Gateway/app.csproj
@@ -2,9 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>fb1e251a-dbc4-43d7-80dd-d7da3d8be7d3</UserSecretsId>
+    <ApplicationInsightsResourceId>/subscriptions/fd94b044-d980-40d3-bd9c-0417736c7b36/resourceGroups/expertdays-rg/providers/microsoft.insights/components/bikeapp-ai</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.1.1" />
