--- a/samples/BikeSharingApp/Gateway/appsettings.json
+++ b/samples/BikeSharingApp/Gateway/appsettings.json
@@ -14,5 +14,8 @@
       "ReservationEngine": "localhost:8080",
       "Billing": "localhost:8080"
     }
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=e36173f3-a3ab-44b3-85a3-a1e99636fca4;IngestionEndpoint=https://westeurope-1.in.applicationinsights.azure.com/"
   }
 }
