--- a/yaml-canary.yml
+++ b/yaml-canary.yml
@@ -7,6 +7,7 @@ resources:
 parameters:
   - name: buildInput
     type: number
+    default: 512
     
 variables:
   - template: .ci/yamlVariables.yml
