Update yaml-canary.yml for Azure Pipelines

--- a/yaml-canary.yml
+++ b/yaml-canary.yml
@@ -1,8 +1,10 @@
-resources:
-  pipelines:
-  - pipeline: gatewayCI 
-    source: gateway.CI
-    trigger: true
+trigger: none
+
+# resources:
+#   pipelines:
+#   - pipeline: gatewayCI 
+#     source: gateway.CI
+#     trigger: true
 
 parameters:
   - name: buildInput
